Sets up pawn movement

--- a/AN_Reader.ipynb
+++ b/AN_Reader.ipynb
@@ -2301,6 +2301,178 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First we create a helper method for pawn movement\n",
+    "\n",
+    "# isWhite is a boolean value to see which color is moving\n",
+    "# move is the string of the move in Algebraic Notation\n",
+    "# game_state is the board\n",
+    "def move_pawn(isWhite, move, game_state):\n",
+    "    if(isWhite):\n",
+    "        pawn = 1\n",
+    "    else:\n",
+    "        pawn = 7\n",
+    "        \n",
+    "    # Get the file of the pawn moving\n",
+    "    file = ord(move[0])-97\n",
+    "    \n",
+    "    #  Checks how many pawns are on this file\n",
+    "    countPawns = 0\n",
+    "    \n",
+    "    for i in range(7):\n",
+    "        if(game_state[i][file] == pawn):\n",
+    "            countPawns += 1\n",
+    "    \n",
+    "    # If only 1 pawn, easy\n",
+    "    if(countPawns == 1):\n",
+    "        \n",
+    "        # Check if pawn is capturing or not first\n",
+    "        if(move[1] == ('x')):\n",
+    "            new_file = ord(move[2])-97\n",
+    "            new_rank = ord(move[3])-49\n",
+    "            \n",
+    "            # Check for an en passant first\n",
+    "            if(game_state[new_rank][new_file] == 0):\n",
+    "                if(isWhite):\n",
+    "                    game_state[new_rank-1][new_file] = 0\n",
+    "                else:\n",
+    "                    game_state[new_rank+1][new_file] = 0\n",
+    "        else:\n",
+    "            new_file = file\n",
+    "            new_rank = ord(move[1])-49\n",
+    "            \n",
+    "        # Find position of pawn\n",
+    "        for i in range(7):\n",
+    "            if(game_state[i][file] == pawn):\n",
+    "                rank = i\n",
+    "                break\n",
+    "        \n",
+    "        # Codify where pawn moved from\n",
+    "        game_state[rank][file] *= -1\n",
+    "        \n",
+    "        # Codify where pawn moved to\n",
+    "            \n",
+    "        game_state[new_rank][new_file] = pawn\n",
+    "        \n",
+    "        # Strips move to the possibility of promotion\n",
+    "        move = move[1:]\n",
+    "        \n",
+    "        if(move[0] == \"x\"):\n",
+    "            move = move[2:]\n",
+    "            \n",
+    "        move = move[1:]\n",
+    "        \n",
+    "        if(len(move) != 0):\n",
+    "            # Checks if pawn promoted in the move too\n",
+    "            if(move[0] == \"=\"):\n",
+    "                if(move[1] == \"Q\"):\n",
+    "                    game_state[new_rank][new_file] = 5\n",
+    "                elif(move[1] == \"R\"):\n",
+    "                    game_state[new_rank][new_file] = 4\n",
+    "                elif(move[1] == \"B\"):\n",
+    "                    game_state[new_rank][new_file] = 3\n",
+    "                else:\n",
+    "                    game_state[new_rank][new_file] = 2\n",
+    "\n",
+    "                # Also checks which color is moving to get the correct color piece\n",
+    "                if(not isWhite):\n",
+    "                    game_state[new_rank][new_file] += 6\n",
+    "    else:\n",
+    "        # Checks if pawn is only moving\n",
+    "        if(not(\"x\" in move)):\n",
+    "            file = ord(move[0])-97\n",
+    "            new_file = file\n",
+    "            new_rank = ord(move[1]) - 49\n",
+    "            \n",
+    "            # Since pawn is only moving, pawn should be very close to the new rank\n",
+    "            # Checks which color is moving to know which direction to backtrack\n",
+    "            if(isWhite):\n",
+    "                # Normal move\n",
+    "                if(game_state[new_rank-1][new_file] == pawn):\n",
+    "                    game_state[new_rank-1][new_file] *= -1\n",
+    "                    game_state[new_rank][new_file] = pawn\n",
+    "                # En Passant\n",
+    "                else:\n",
+    "                    game_state[new_rank-2][new_file] *= -1\n",
+    "                    game_state[new_rank][new_file] = pawn\n",
+    "            else:\n",
+    "                # Normal move\n",
+    "                if(game_state[new_rank+1][new_file] == pawn):\n",
+    "                    game_state[new_rank + 1][new_file] *= -1\n",
+    "                    game_state[new_rank][new_file] = pawn\n",
+    "                # En Passant\n",
+    "                else:\n",
+    "                    game_state[new_rank+2][new_file] *= -1\n",
+    "                    game_state[new_rank][new_file] = pawn\n",
+    "            \n",
+    "            # Strips move to the possibility of promotion\n",
+    "            move = move[1:]\n",
+    "\n",
+    "            if(move[0] == \"x\"):\n",
+    "                move = move[2:]\n",
+    "\n",
+    "            move = move[1:]\n",
+    "\n",
+    "            if(len(move) != 0):\n",
+    "                # Checks if pawn promoted in the move too\n",
+    "                if(move[0] == \"=\"):\n",
+    "                    if(move[1] == \"Q\"):\n",
+    "                        game_state[new_rank][new_file] = 5\n",
+    "                    elif(move[1] == \"R\"):\n",
+    "                        game_state[new_rank][new_file] = 4\n",
+    "                    elif(move[1] == \"B\"):\n",
+    "                        game_state[new_rank][new_file] = 3\n",
+    "                    else:\n",
+    "                        game_state[new_rank][new_file] = 2\n",
+    "\n",
+    "                    # Also checks which color is moving to get the correct color piece\n",
+    "                    if(not isWhite):\n",
+    "                        game_state[new_rank][new_file] += 6\n",
+    "                        \n",
+    "        # Otherwise pawn is capturing, which makes this more difficult\n",
+    "        else:\n",
+    "            file = ord(move[0])-97\n",
+    "            new_file = ord(move[2])-97\n",
+    "            new_rank = ord(move[3])-49\n",
+    "            \n",
+    "            # Check which direction a piece would be taking by looking at the color it is\n",
+    "            if(isWhite):\n",
+    "                rank = new_rank - 1\n",
+    "            else:\n",
+    "                rank = new_rank + 1\n",
+    "            \n",
+    "            # Check for an en passant first\n",
+    "            if(game_state[new_rank][new_file] == 0):\n",
+    "                if(isWhite):\n",
+    "                    game_state[new_rank-1][new_file] = 0\n",
+    "                else:\n",
+    "                    game_state[new_rank+1][new_file] = 0\n",
+    "            \n",
+    "            game_state[rank][file] *= -1\n",
+    "            game_state[new_rank][new_file] = pawn\n",
+    "            \n",
+    "            # Checks if pawn promoted in the move too\n",
+    "            if(move[-2] == \"=\"):\n",
+    "                if(move[-1] == \"Q\"):\n",
+    "                    game_state[new_rank][new_file] = 5\n",
+    "                elif(move[-1] == \"R\"):\n",
+    "                    game_state[new_rank][new_file] = 4\n",
+    "                elif(move[-1] == \"B\"):\n",
+    "                    game_state[new_rank][new_file] = 3\n",
+    "                else:\n",
+    "                    game_state[new_rank][new_file] = 2\n",
+    "\n",
+    "                # Also checks which color is moving to get the correct color piece\n",
+    "                if(not isWhite):\n",
+    "                    game_state[new_rank][new_file] += 6\n",
+    "    return game_state"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
